# primebds

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build.sh  build_errors.txt  build_errors2.txt  pyproject.toml
.github/workflows/: build.yml  publish.yml  release.yml
include/primebds/: plugin.h  version.h.in
include/primebds/commands/: command_metadata.h  command_registry.h
include/primebds/handlers/: actions.h  afk.h  chat.h  gamerules.h  items.h
include/primebds/utils/: address.h  economy.h  forms.h  intervals.h  item_slot.h  logging.h  moderation.h  target_selector.h  time.h
python_archive/src/endstone_primebds/: primebds.py
src/: glibc_compat.cpp  plugin.cpp
src/commands/: command_metadata.cpp  command_registry.cpp
src/commands/gamemode/: gma.cpp  gmc.cpp  gms.cpp  gmsp.cpp  gmt.cpp
src/commands/item/: enchantforce.cpp  giveforce.cpp  hat.cpp  iteminfo.cpp  itemlore.cpp  itemname.cpp  itemtag.cpp  more.cpp  repair.cpp
src/commands/java_parody/: alist.cpp  bossbar.cpp  spectate.cpp
src/commands/message/: broadcast.cpp  clearchat.cpp  discord.cpp  motd.cpp  msgtoggle.cpp  note.cpp  popup.cpp  reply.cpp  rules.cpp  setrules.cpp  socialspy.cpp  staffchat.cpp  tip.cpp  toast.cpp  voice.cpp
src/commands/misc/: activity.cpp  activitylist.cpp  afk.cpp  blockinfo.cpp  blockscan.cpp  check.cpp  cords.cpp  entityinfo.cpp  feed.cpp  god.cpp  heal.cpp  nickname.cpp  ping.cpp  playtime.cpp
src/commands/moderation/: alts.cpp  altspy.cpp  globalmute.cpp  ipban.cpp  ipmute.cpp  modspy.cpp  mute.cpp  nameban.cpp  nameunban.cpp  permban.cpp  punishments.cpp  removeban.cpp  silentmute.cpp  tempban.cpp  tempmute.cpp  unmute.cpp  unwarn.cpp  warn.cpp  warnings.cpp
src/commands/movement/: back.cpp  bottom.cpp  fly.cpp  home.cpp  homeother.cpp  offlinetp.cpp  setback.cpp  sethomes.cpp  setspawn.cpp  spawn.cpp  speed.cpp  top.cpp  warp.cpp  warps.cpp
src/commands/server/: filterlist.cpp  monitor.cpp  permissions.cpp  permissionslist.cpp  primebds.cpp  rank.cpp  reloadscripts.cpp  send.cpp  updatepacks.cpp
src/endstone_primebds/: primebds.py
src/handlers/: actions.cpp  afk.cpp  chat.cpp  gamerules.cpp  items.cpp
src/handlers/combat/: damage.cpp  (+2 more)
src/utils/: address.cpp  economy.cpp  forms.cpp  intervals.cpp  logging.cpp  moderation.cpp  target_selector.cpp  time.cpp
(+69 files in other folders)
